tests/files/lexer_tests/should_fail/075.cmdr
// Should fail when statement is not terminated by a semicolon
pi = 3.141592653589793238462643383279502